@@ -1,4 +1,8 @@
 2010-01-27  Aurelien Degremont <aurelien.degremont@cea.fr>
+	* Fix tuning.conf parsing. Better error handling.
+	* Add an example file for tuning.
+
+2010-01-27  Aurelien Degremont <aurelien.degremont@cea.fr>
 	* Fix wrong target count in 'status' command.
 
 2009-12-16  Stephane Thiell  <stephane.thiell@cea.fr>
